Compatible with router 6.4.2 and Added README.md

--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "react-learning",
+  "name": "react-router-guard-ts",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
+  "author": "cowjiang@163.com",
   "scripts": {
     "dev": "vite --open",
     "build": "tsc && vite build",
